list loaded songs

--- a/musicPlayer/MusicPlayerGUI/AppShell.xaml
+++ b/musicPlayer/MusicPlayerGUI/AppShell.xaml
@@ -8,7 +8,7 @@
     Title="MusicPlayerGUI">
 
     <ShellContent
-        Title="Home"
+        Title="MainPage"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
