--- a/musicPlayer/MusicPlayerGUI/MainPage.xaml
+++ b/musicPlayer/MusicPlayerGUI/MainPage.xaml
@@ -1,36 +1,43 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MusicPlayerGUI.MainPage">
+    <VerticalStackLayout Padding="20" Spacing="15">
+        <!-- Поле для ввода пути к песням -->
+        <Entry x:Name="PathEntry"
+           Placeholder="Введите путь к песням" />
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+        <!-- Кнопка для загрузки песен -->
+        <Button Text="Load Songs"
+            Clicked="OnLoadSongsClicked" />
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
-
+        <!-- Список для отображения загруженных треков -->
+        <ListView x:Name="SongsListView">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid Padding="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackLayout Orientation="Vertical">
+                                <Label Text="{Binding Title}"
+                       FontSize="18"
+                       FontAttributes="Bold" />
+                                <Label Text="{Binding Artist}"
+                       FontSize="14" />
+                                <Label Text="{Binding Duration}"
+                       FontSize="14" />
+                            </StackLayout>
+                            <!-- Кнопка для добавления трека в очередь -->
+                            <Button Text="Add"
+                      Grid.Column="1"
+                      Clicked="OnAddTrackClicked" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </VerticalStackLayout>
 </ContentPage>
