--- a/musicPlayer/MusicPlayerGUI/MainPage.xaml
+++ b/musicPlayer/MusicPlayerGUI/MainPage.xaml
@@ -2,42 +2,124 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MusicPlayerGUI.MainPage">
-    <VerticalStackLayout Padding="20" Spacing="15">
-        <!-- Поле для ввода пути к песням -->
+    <Grid Padding="20" RowSpacing="15"
+          VerticalOptions="FillAndExpand"
+          HorizontalOptions="FillAndExpand">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+
         <Entry x:Name="PathEntry"
-           Placeholder="Введите путь к песням" />
+               Placeholder="Enter path to songs directory"
+               FontSize="14"
+               Grid.Row="0"
+               Grid.Column="0"
+               HorizontalOptions="Fill"
+               Margin="0,5,5,0"/>
 
-        <!-- Кнопка для загрузки песен -->
         <Button Text="Load Songs"
-            Clicked="OnLoadSongsClicked" />
+                Clicked="OnLoadSongsClicked"
+                BackgroundColor="Blue"
+                TextColor="White"
+                Grid.Row="0"
+                Grid.Column="1"
+                HorizontalOptions="End"
+                Margin="0,5,0,0"/>
 
-        <!-- Список для отображения загруженных треков -->
-        <ListView x:Name="SongsListView">
-            <ListView.ItemTemplate>
+        <CollectionView x:Name="TrackListView"
+                        Grid.Row="1"
+                        Grid.ColumnSpan="2"
+                        ItemsSource="{Binding Tracks}"
+                        SelectionMode="None">
+            <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <ViewCell>
-                        <Grid Padding="5">
+                    <Frame Padding="10" Margin="5" BackgroundColor="LightGray" CornerRadius="5">
+                        <Grid ColumnSpacing="10" RowSpacing="3">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <StackLayout Orientation="Vertical">
-                                <Label Text="{Binding Title}"
-                       FontSize="18"
-                       FontAttributes="Bold" />
-                                <Label Text="{Binding Artist}"
-                       FontSize="14" />
-                                <Label Text="{Binding Duration}"
-                       FontSize="14" />
-                            </StackLayout>
-                            <!-- Кнопка для добавления трека в очередь -->
-                            <Button Text="Add"
-                      Grid.Column="1"
-                      Clicked="OnAddTrackClicked" />
+
+                            <Label Text="{Binding Title}"
+                                   FontSize="16"
+                                   FontAttributes="Bold"
+                                   Grid.Row="0"
+                                   Grid.Column="0"
+                                   VerticalOptions="Center"
+                                   HorizontalOptions="Start"/>
+
+                            <Label Text="{Binding Duration}"
+                                   FontSize="16"
+                                   FontAttributes="Bold"
+                                   Grid.Row="0"
+                                   Grid.Column="1"
+                                   VerticalOptions="Center"
+                                   HorizontalOptions="End"/>
+
+                            <Label Text="{Binding Artist}"
+                                   FontSize="14"
+                                   Grid.Row="1"
+                                   Grid.Column="0"
+                                   Grid.ColumnSpan="2"
+                                   VerticalOptions="Center"
+                                   HorizontalOptions="Start"/>
+
+                            <Button Text="➕"
+                                    FontSize="16"
+                                    BackgroundColor="Transparent"
+                                    TextColor="Black"
+                                    BorderWidth="0"
+                                    Command="{Binding AddToQueueCommand}"
+                                    CommandParameter="{Binding}"
+                                    Grid.Row="0"
+                                    Grid.RowSpan="2"
+                                    Grid.Column="2"
+                                    VerticalOptions="Center"
+                                    HorizontalOptions="End"/>
                         </Grid>
-                    </ViewCell>
+                    </Frame>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </VerticalStackLayout>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
+        <StackLayout x:Name="NotificationBlock"
+                     Orientation="Horizontal"
+                     BackgroundColor="LightGray"
+                     Padding="10"
+                     Margin="0,10,0,0"
+                     IsVisible="False"
+                     Grid.Row="2"
+                     Grid.ColumnSpan="2"
+                     HorizontalOptions="Fill">
+
+            <Label x:Name="NotificationLabel"
+                   FontSize="14"
+                   TextColor="White"
+                   VerticalOptions="Center"
+                   HorizontalOptions="FillAndExpand"
+                   Margin="0,0,10,0"/>
+
+            <Button x:Name="NotificationButton"
+                    Text="OK"
+                    Clicked="OnNotificationButtonClicked"
+                    BackgroundColor="Gray"
+                    TextColor="White"
+                    VerticalOptions="Center"
+                    HorizontalOptions="End"/>
+        </StackLayout>
+
+    </Grid>
 </ContentPage>
