--- a/musicPlayer/MusicPlayerGUI/MainPage.xaml
+++ b/musicPlayer/MusicPlayerGUI/MainPage.xaml
@@ -1,44 +1,65 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MusicPlayerGUI.MainPage">
+<ContentPage 
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="MusicPlayerGUI.MainPage">
     <Grid Padding="20" RowSpacing="15"
-          VerticalOptions="FillAndExpand"
-          HorizontalOptions="FillAndExpand">
-
+        VerticalOptions="FillAndExpand"
+        HorizontalOptions="FillAndExpand">
         <Grid.RowDefinitions>
+            <!-- Row 0: Ввод пути и кнопка "Load Songs" -->
             <RowDefinition Height="Auto"/>
+            <!-- Row 1: Переключатель для выбора режима -->
+            <RowDefinition Height="Auto"/>
+            <!-- Row 2: Список треков -->
             <RowDefinition Height="*"/>
+            <!-- Row 3: Блок уведомлений -->
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <Entry x:Name="PathEntry"
-               Placeholder="Enter path to songs directory"
-               FontSize="14"
-               Grid.Row="0"
-               Grid.Column="0"
-               HorizontalOptions="Fill"
-               Margin="0,5,5,0"/>
-
+        <!-- Row 0 -->
+        <Entry Text="{Binding SongsPath}" 
+           Placeholder="Enter path to songs directory"
+           FontSize="14"
+           Grid.Row="0"
+           Grid.Column="0"
+           HorizontalOptions="Fill"
+           Margin="0,5,5,0"/>
         <Button Text="Load Songs"
-                Clicked="OnLoadSongsClicked"
-                BackgroundColor="Blue"
-                TextColor="White"
-                Grid.Row="0"
-                Grid.Column="1"
-                HorizontalOptions="End"
-                Margin="0,5,0,0"/>
+            Command="{Binding LoadSongsCommand}"
+            BackgroundColor="Blue"
+            TextColor="White"
+            Grid.Row="0"
+            Grid.Column="1"
+            HorizontalOptions="End"
+            Margin="0,5,0,0"/>
 
-        <CollectionView x:Name="TrackListView"
-                        Grid.Row="1"
-                        Grid.ColumnSpan="2"
-                        ItemsSource="{Binding Tracks}"
-                        SelectionMode="None">
+        <!-- Row 1: Переключатель режимов -->
+        <StackLayout Grid.Row="1" Grid.ColumnSpan="2" 
+                 Orientation="Horizontal" 
+                 HorizontalOptions="FillAndExpand" 
+                 VerticalOptions="Center">
+            <Label Text="{Binding ModeLabel}" 
+             FontSize="24" 
+             VerticalOptions="Center" 
+             HorizontalOptions="Start"/>
+            <BoxView BackgroundColor="Transparent" 
+               HorizontalOptions="FillAndExpand"/>
+            <Button Text="{Binding ToggleModeButtonText}" 
+              Command="{Binding ToggleModeCommand}"
+              Margin="10,0"  
+              HorizontalOptions="End"/>
+        </StackLayout>
+
+        <!-- Row 2: Список треков -->
+        <CollectionView ItemsSource="{Binding DisplayedTracks}"
+                    Grid.Row="2"
+                    Grid.ColumnSpan="2"
+                    SelectionMode="None">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Frame Padding="10" Margin="5" BackgroundColor="LightGray" CornerRadius="5">
@@ -52,74 +73,66 @@
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-
                             <Label Text="{Binding Title}"
-                                   FontSize="16"
-                                   FontAttributes="Bold"
-                                   Grid.Row="0"
-                                   Grid.Column="0"
-                                   VerticalOptions="Center"
-                                   HorizontalOptions="Start"/>
-
+                     FontSize="16"
+                     FontAttributes="Bold"
+                     Grid.Row="0"
+                     Grid.Column="0"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Start"/>
                             <Label Text="{Binding Duration}"
-                                   FontSize="16"
-                                   FontAttributes="Bold"
-                                   Grid.Row="0"
-                                   Grid.Column="1"
-                                   VerticalOptions="Center"
-                                   HorizontalOptions="End"/>
-
+                     FontSize="16"
+                     FontAttributes="Bold"
+                     Grid.Row="0"
+                     Grid.Column="1"
+                     VerticalOptions="Center"
+                     HorizontalOptions="End"/>
                             <Label Text="{Binding Artist}"
-                                   FontSize="14"
-                                   Grid.Row="1"
-                                   Grid.Column="0"
-                                   Grid.ColumnSpan="2"
-                                   VerticalOptions="Center"
-                                   HorizontalOptions="Start"/>
-
-                            <Button Text="➕"
-                                    FontSize="16"
-                                    BackgroundColor="Transparent"
-                                    TextColor="Black"
-                                    BorderWidth="0"
-                                    Command="{Binding AddToQueueCommand}"
-                                    CommandParameter="{Binding}"
-                                    Grid.Row="0"
-                                    Grid.RowSpan="2"
-                                    Grid.Column="2"
-                                    VerticalOptions="Center"
-                                    HorizontalOptions="End"/>
+                     FontSize="14"
+                     Grid.Row="1"
+                     Grid.Column="0"
+                     Grid.ColumnSpan="2"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Start"/>
+                            <Button Text="Add"
+                      FontSize="16"
+                      BackgroundColor="Transparent"
+                      TextColor="Black"
+                      BorderWidth="0"
+                      Command="{Binding AddToQueueCommand}"
+                      CommandParameter="{Binding}"
+                      Grid.Row="0"
+                      Grid.RowSpan="2"
+                      Grid.Column="2"
+                      VerticalOptions="Center"
+                      HorizontalOptions="End"/>
                         </Grid>
                     </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <StackLayout x:Name="NotificationBlock"
-                     Orientation="Horizontal"
-                     BackgroundColor="LightGray"
-                     Padding="10"
-                     Margin="0,10,0,0"
-                     IsVisible="False"
-                     Grid.Row="2"
-                     Grid.ColumnSpan="2"
-                     HorizontalOptions="Fill">
-
-            <Label x:Name="NotificationLabel"
-                   FontSize="14"
-                   TextColor="White"
-                   VerticalOptions="Center"
-                   HorizontalOptions="FillAndExpand"
-                   Margin="0,0,10,0"/>
-
-            <Button x:Name="NotificationButton"
-                    Text="OK"
-                    Clicked="OnNotificationButtonClicked"
-                    BackgroundColor="Gray"
-                    TextColor="White"
-                    VerticalOptions="Center"
-                    HorizontalOptions="End"/>
+        <!-- Row 3: Блок уведомлений -->
+        <StackLayout Orientation="Horizontal"
+                 BackgroundColor="LightGray"
+                 Padding="10"
+                 Margin="0,10,0,0"
+                 IsVisible="{Binding NotificationVisible}"
+                 Grid.Row="3"
+                 Grid.ColumnSpan="2"
+                 HorizontalOptions="Fill">
+            <Label Text="{Binding NotificationMessage}"
+             FontSize="14"
+             TextColor="White"
+             VerticalOptions="Center"
+             HorizontalOptions="FillAndExpand"
+             Margin="0,0,10,0"/>
+            <Button Text="{Binding NotificationButtonText}"
+              Command="{Binding NotificationCommand}"
+              BackgroundColor="Gray"
+              TextColor="White"
+              VerticalOptions="Center"
+              HorizontalOptions="End"/>
         </StackLayout>
-
     </Grid>
 </ContentPage>
